--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "jupytext" %}
-{% set version = "1.8.2" %}
+{% set version = "1.9.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 9d5f64cc8832f0ba73f3116d94242876419387f9af53cdefa965ba3423ebf245
+  sha256: c4a60e2ad086f542fe52fb8c6531d2f450ac710efac4fd0087da41bf1a06051e
 
 build:
   number: 0
@@ -17,9 +17,11 @@ build:
   script: {{ PYTHON }} -m pip install . --no-deps -vvv
 
 requirements:
-  host:
+  build:
     - pip
     - python
+    - jupyter-packaging
+    - jupyterlab >=3.0
   run:
     - nbformat >=4.0.0
     - pyyaml
