--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - jupyterlab >=3.0
   run:
     - python >=3.6
-    - nbformat >=4.0.0
+    - nbformat <=5.0.8
     - pyyaml
     - toml
     - markdown-it-py >=0.6,<0.7
