--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "jupytext" %}
-{% set version = "1.10.0" %}
+{% set version = "1.10.2" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 26922b3de89445af2ccb70fce7bb0d57f97799c1d4912dd97f7fa42fbbc0436d
+  sha256: b71e60be37fc6f10127126bcff46e5ec0188760f349277b08ed9044300d14b46
 
 build:
   number: 0
@@ -26,7 +26,7 @@ requirements:
     - jupyterlab >=3.0
   run:
     - python >=3.6
-    - nbformat <=5.0.8
+    - nbformat
     - pyyaml
     - toml
     - markdown-it-py >=0.6,<0.7
