--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 8dd68be6ab205097908289a187d8973a28fa6c86d438d9bfa41a01c8b2fd34a8
 
 build:
-  number: 0
+  number: 1
   entry_points:
     - jupytext = jupytext.cli:jupytext
   noarch: python
@@ -30,6 +30,7 @@ requirements:
     - pyyaml
     - toml
     - markdown-it-py >=1.0,<2.0
+    - mdit-py-plugins
 
 test:
   imports:
