--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - python
     - nodejs
     - jupyter-packaging
-    - jupyterlab >=3.0
+    - jupyterlab >=3.0,<4.0
   run:
     - python >=3.6
     - nbformat
