Remove upper bound on markdown-it-py version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - nbformat
     - pyyaml
     - toml
-    - markdown-it-py >=1.0,<3.0
+    - markdown-it-py >=1.0
     - mdit-py-plugins
 
 test:
