--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,16 +15,14 @@ build:
     - jupytext = jupytext.cli:jupytext
     - jupytext-config = jupytext_config.__main__:main
   noarch: python
-  script: python -m build
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
     - python >=3.8,<3.12
-    - pip
-    - build
-    - wheel
-    - nodejs
-    - jupyterlab >=4.0
+    - python-build
+    - hatch-jupyter-builder >=0.3.2
+    - hatchling >=1.5.0
   run:
     - python >=3.8
     - nbformat
