--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - python-build
     - hatch-jupyter-builder >=0.3.2
     - hatchling >=1.5.0
+    - pip
   run:
     - python >=3.8
     - nbformat
