--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "jupytext" %}
-{% set version = "1.16.1" %}
+{% set version = "1.16.2" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 68c7b68685e870e80e60fda8286fbd6269e9c74dc1df4316df6fe46eabc94c99
+  sha256: 8627dd9becbbebd79cc4a4ed4727d89d78e606b4b464eab72357b3b029023a14
 
 build:
   number: 0
@@ -15,7 +15,7 @@ build:
     - jupytext = jupytext.cli:jupytext
     - jupytext-config = jupytext_config.__main__:main
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vvv
+  script: HATCH_BUILD_HOOKS_ENABLE=true {{ PYTHON }} -m pip install . --no-deps -vvv
 
 requirements:
   host:
