--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,8 @@ requirements:
     - python-build
     - hatch-jupyter-builder >=0.3.2
     - hatchling >=1.5.0
+    # needed for jlpm
+    - jupyterlab
     - pip
   run:
     - python >=3.8
