--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - hatch-jupyter-builder >=0.3.2
     - hatchling >=1.5.0
     # needed for jlpm
+    - jupyterlab
     - nodejs
     - pip
   run:
